removing dead code, adding new image

--- a/public/src/config.json
+++ b/public/src/config.json
@@ -5,6 +5,18 @@
   "playerFill": 255,
   "enemyDisabled": 127,
   "enemyEnabled": 255,
+  "playerDisabled": [
+    51,
+    34,
+    12,
+    127
+  ],
+  "playerEnabled": [
+    200,
+    200,
+    200,
+    200
+  ],
   "screen": "dynamic",
   "resolution": {
     "w": 1920,
@@ -17,63 +29,123 @@
         "y": 0
       },
       "size": {
-        "w": [1, 3],
-        "h": [1, 4]
+        "w": [
+          1,
+          3
+        ],
+        "h": [
+          1,
+          4
+        ]
       },
+      "image": "health.png",
       "textSize": 64,
-      "fill": [0, 255, 0],
-      "stroke": [0, 255, 0, 127]
+      "fill": [
+        0,
+        255,
+        0
+      ],
+      "stroke": [
+        0,
+        255,
+        0,
+        127
+      ]
     },
     "eyeball": {
       "position": {
-        "x": [-2, 3],
-        "y": [3, 4]
+        "x": [
+          -2,
+          3
+        ],
+        "y": [
+          3,
+          4
+        ]
       },
       "size": {
-        "w": [1, 4],
-        "h": [1, 7]
+        "w": [
+          1,
+          4
+        ],
+        "h": [
+          1,
+          7
+        ]
       },
       "fill": "#991111",
-      "stroke": [200, 30, 30, 127],
-
+      "stroke": [
+        200,
+        30,
+        30,
+        127
+      ],
       "image": "eyeball.png"
     },
     "lightning": {
       "position": {
         "x": 0,
-        "y": [3, 4]
+        "y": [
+          3,
+          4
+        ]
       },
       "size": {
-        "w": [1, 4],
-        "h": [1, 7]
+        "w": [
+          1,
+          4
+        ],
+        "h": [
+          1,
+          7
+        ]
       },
       "fill": "#003399",
       "stroke": 255,
-
       "image": "lightning.png"
     },
     "horn": {
       "position": {
-        "x": [2, 3],
-        "y": [3, 4]
+        "x": [
+          2,
+          3
+        ],
+        "y": [
+          3,
+          4
+        ]
       },
       "size": {
-        "w": [1, 4],
-        "h": [1, 7]
+        "w": [
+          1,
+          4
+        ],
+        "h": [
+          1,
+          7
+        ]
       },
       "fill": "#332211",
       "stroke": "#442211",
-
       "image": "horn.png"
     },
     "enemy1": {
       "position": {
         "x": 0,
-        "y": [-9, 16]
+        "y": [
+          -9,
+          16
+        ]
       },
       "size": {
-        "w": [1, 6],
-        "h": [1, 9]
+        "w": [
+          1,
+          6
+        ],
+        "h": [
+          1,
+          9
+        ]
       },
       "fill": "#332211",
       "stroke": "#442211",
@@ -83,11 +155,20 @@
     "enemy2": {
       "position": {
         "x": 0,
-        "y": [-9, 16]
+        "y": [
+          -9,
+          16
+        ]
       },
       "size": {
-        "w": [1, 6],
-        "h": [1, 9]
+        "w": [
+          1,
+          6
+        ],
+        "h": [
+          1,
+          9
+        ]
       },
       "fill": "#332211",
       "stroke": "#442211",
@@ -97,11 +178,20 @@
     "enemy3": {
       "position": {
         "x": 0,
-        "y": [-9, 16]
+        "y": [
+          -9,
+          16
+        ]
       },
       "size": {
-        "w": [1, 6],
-        "h": [1, 9]
+        "w": [
+          1,
+          6
+        ],
+        "h": [
+          1,
+          9
+        ]
       },
       "fill": "#332211",
       "stroke": "#442211",
@@ -111,11 +201,20 @@
     "enemy4": {
       "position": {
         "x": 0,
-        "y": [-9, 16]
+        "y": [
+          -9,
+          16
+        ]
       },
       "size": {
-        "w": [1, 6],
-        "h": [1, 9]
+        "w": [
+          1,
+          6
+        ],
+        "h": [
+          1,
+          9
+        ]
       },
       "fill": "#332211",
       "stroke": "#442211",
@@ -125,11 +224,20 @@
     "enemy5": {
       "position": {
         "x": 0,
-        "y": [-9, 16]
+        "y": [
+          -9,
+          16
+        ]
       },
       "size": {
-        "w": [1, 6],
-        "h": [1, 9]
+        "w": [
+          1,
+          6
+        ],
+        "h": [
+          1,
+          9
+        ]
       },
       "fill": "#332211",
       "stroke": "#442211",
@@ -141,23 +249,50 @@
     "2": {
       "position": [
         {
-          "x": [1, 4],
-          "y": [1, 2]
+          "x": [
+            1,
+            4
+          ],
+          "y": [
+            1,
+            2
+          ]
         },
         {
-          "x": [3, 4],
-          "y": [1, 2]
+          "x": [
+            3,
+            4
+          ],
+          "y": [
+            1,
+            2
+          ]
         }
       ],
-      "rotation": [90, 270],
+      "rotation": [
+        90,
+        270
+      ],
       "size": [
         {
-          "h": [3, 8],
-          "w": [5, 8]
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            5,
+            8
+          ]
         },
         {
-          "h": [3, 8],
-          "w": [5, 8]
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            5,
+            8
+          ]
         }
       ]
     },
@@ -195,39 +330,92 @@
     "4": {
       "position": [
         {
-          "x": [1, 7],
-          "y": [1, 2]
+          "x": [
+            1,
+            7
+          ],
+          "y": [
+            1,
+            2
+          ]
         },
         {
-          "x": [6, 7],
-          "y": [1, 2]
+          "x": [
+            6,
+            7
+          ],
+          "y": [
+            1,
+            2
+          ]
         },
         {
-          "x": [1, 2],
-          "y": [5, 7]
+          "x": [
+            1,
+            2
+          ],
+          "y": [
+            5,
+            7
+          ]
         },
         {
-          "x": [1, 2],
-          "y": [2, 7]
+          "x": [
+            1,
+            2
+          ],
+          "y": [
+            2,
+            7
+          ]
         }
       ],
-      "rotation": [90, 270, 0, 180],
+      "rotation": [
+        90,
+        270,
+        0,
+        180
+      ],
       "size": [
         {
-          "h": [3, 16],
-          "w": [3, 4]
+          "h": [
+            3,
+            16
+          ],
+          "w": [
+            3,
+            4
+          ]
         },
         {
-          "h": [3, 16],
-          "w": [3, 4]
+          "h": [
+            3,
+            16
+          ],
+          "w": [
+            3,
+            4
+          ]
         },
         {
-          "h": [5, 16],
-          "w": [1, 2]
+          "h": [
+            5,
+            16
+          ],
+          "w": [
+            1,
+            2
+          ]
         },
         {
-          "h": [5, 16],
-          "w": [1, 2]
+          "h": [
+            5,
+            16
+          ],
+          "w": [
+            1,
+            2
+          ]
         }
       ]
     },
