--- a/public/src/config.json
+++ b/public/src/config.json
@@ -1,5 +1,6 @@
 {
   "players": 4,
+  "debug": true,
   "listen": 8080,
   "textSize": 36,
   "playerFill": 255,
@@ -38,19 +39,9 @@
           4
         ]
       },
-      "image": "health.png",
       "textSize": 64,
-      "fill": [
-        0,
-        255,
-        0
-      ],
-      "stroke": [
-        0,
-        255,
-        0,
-        127
-      ]
+      "fill": 255,
+      "image": "health.png"
     },
     "eyeball": {
       "position": {
@@ -73,13 +64,7 @@
           7
         ]
       },
-      "fill": "#991111",
-      "stroke": [
-        200,
-        30,
-        30,
-        127
-      ],
+      "fill": 255,
       "image": "eyeball.png"
     },
     "lightning": {
@@ -100,8 +85,7 @@
           7
         ]
       },
-      "fill": "#003399",
-      "stroke": 255,
+      "fill": 255,
       "image": "lightning.png"
     },
     "horn": {
@@ -125,13 +109,15 @@
           7
         ]
       },
-      "fill": "#332211",
-      "stroke": "#442211",
+      "fill": 255,
       "image": "horn.png"
     },
     "enemy1": {
       "position": {
-        "x": 0,
+        "x": [
+          -2,
+          3
+        ],
         "y": [
           -9,
           16
@@ -147,14 +133,16 @@
           9
         ]
       },
-      "fill": "#332211",
-      "stroke": "#442211",
+      "fill": 255,
       "textSize": 18,
       "image": "enemy.png"
     },
     "enemy2": {
       "position": {
-        "x": 0,
+        "x": [
+          -1,
+          3
+        ],
         "y": [
           -9,
           16
@@ -170,8 +158,7 @@
           9
         ]
       },
-      "fill": "#332211",
-      "stroke": "#442211",
+      "fill": 255,
       "textSize": 18,
       "image": "enemy.png"
     },
@@ -193,14 +180,16 @@
           9
         ]
       },
-      "fill": "#332211",
-      "stroke": "#442211",
+      "fill": 255,
       "textSize": 18,
       "image": "enemy.png"
     },
     "enemy4": {
       "position": {
-        "x": 0,
+        "x": [
+          1,
+          3
+        ],
         "y": [
           -9,
           16
@@ -216,14 +205,16 @@
           9
         ]
       },
-      "fill": "#332211",
-      "stroke": "#442211",
+      "fill": 255,
       "textSize": 18,
       "image": "enemy.png"
     },
     "enemy5": {
       "position": {
-        "x": 0,
+        "x": [
+          2,
+          3
+        ],
         "y": [
           -9,
           16
@@ -239,8 +230,7 @@
           9
         ]
       },
-      "fill": "#332211",
-      "stroke": "#442211",
+      "fill": 255,
       "textSize": 18,
       "image": "enemy.png"
     }
