moved to board layout selection instead of # of players

--- a/public/src/config.json
+++ b/public/src/config.json
@@ -1,5 +1,6 @@
 {
   "players": "2",
+  "board": "2 Long",
   "debug": true,
   "listen": 8080,
   "screen": "dynamic",
@@ -9,7 +10,7 @@
   },
   "image": {
     "size": {
-      "max": 75
+      "max": 50
     }
   },
   "text": {
@@ -269,7 +270,7 @@
     }
   },
   "layout": {
-    "2": {
+    "2 Long": {
       "position": [
         {
           "x": [
@@ -303,7 +304,7 @@
             8
           ],
           "w": [
-            5,
+            7,
             8
           ]
         },
@@ -313,7 +314,7 @@
             8
           ],
           "w": [
-            5,
+            7,
             8
           ]
         }
