finished most of the layouts + tested

--- a/public/src/config.json
+++ b/public/src/config.json
@@ -1,9 +1,14 @@
 {
-  "players": "2",
   "board": "2 Long",
   "debug": true,
   "listen": 8080,
   "screen": "dynamic",
+  "select": {
+    "position": {
+      "x": 5,
+      "y": 5
+    }
+  },
   "resolution": {
     "w": 1920,
     "h": 1080
@@ -211,6 +216,7 @@
           ]
         },
         "fill": 255,
+        "text": "Testing",
         "textSize": 18,
         "disabled": true,
         "image": "enemy.png"
@@ -320,38 +326,433 @@
         }
       ]
     },
-    "3": {
+    "2 Short": {
       "position": [
         {
-          "x": 0,
-          "y": 0
+          "y": [
+            1,
+            4
+          ],
+          "x": [
+            1,
+            2
+          ]
         },
         {
-          "x": 0,
-          "y": 0
-        },
-        {
-          "x": 0,
-          "y": 0
+          "y": [
+            3,
+            4
+          ],
+          "x": [
+            1,
+            2
+          ]
         }
       ],
-      "rotation": [],
+      "rotation": [
+        180,
+        0
+      ],
       "size": [
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         },
         {
-          "h": 0,
-          "w": 0
-        },
-        {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         }
       ]
     },
-    "4": {
+    "3 Left": {
+      "position": [
+        {
+          "y": [
+            1,
+            4
+          ],
+          "x": [
+            1,
+            2
+          ]
+        },
+        {
+          "y": [
+            3,
+            4
+          ],
+          "x": [
+            1,
+            2
+          ]
+        },
+        {
+          "x": [
+            5,
+            32
+          ],
+          "y": [
+            1,
+            2
+          ]
+        }
+      ],
+      "rotation": [
+        180,
+        0,
+        90
+      ],
+      "size": [
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            1,
+            4
+          ],
+          "w": [
+            5,
+            8
+          ]
+        }
+      ]
+    },
+    "3 Right": {
+      "position": [
+        {
+          "y": [
+            1,
+            4
+          ],
+          "x": [
+            1,
+            2
+          ]
+        },
+        {
+          "y": [
+            3,
+            4
+          ],
+          "x": [
+            1,
+            2
+          ]
+        },
+        {
+          "x": [
+            27,
+            32
+          ],
+          "y": [
+            1,
+            2
+          ]
+        }
+      ],
+      "rotation": [
+        180,
+        0,
+        270
+      ],
+      "size": [
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            1,
+            4
+          ],
+          "w": [
+            5,
+            8
+          ]
+        }
+      ]
+    },
+    "3 Up": {
+      "position": [
+        {
+          "y": [
+            1,
+            4
+          ],
+          "x": [
+            4,
+            16
+          ]
+        },
+        {
+          "y": [
+            3,
+            4
+          ],
+          "x": [
+            1,
+            2
+          ]
+        },
+        {
+          "x": [
+            12,
+            16
+          ],
+          "y": [
+            1,
+            4
+          ]
+        }
+      ],
+      "rotation": [
+        180,
+        0,
+        180
+      ],
+      "size": [
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        }
+      ]
+    },
+    "3 Down": {
+      "position": [
+        {
+          "y": [
+            1,
+            4
+          ],
+          "x": [
+            1,
+            2
+          ]
+        },
+        {
+          "y": [
+            3,
+            4
+          ],
+          "x": [
+            4,
+            16
+          ]
+        },
+        {
+          "x": [
+            12,
+            16
+          ],
+          "y": [
+            3,
+            4
+          ]
+        }
+      ],
+      "rotation": [
+        180,
+        0,
+        0
+      ],
+      "size": [
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        }
+      ]
+    },
+    "4 Cross": {
+      "position": [
+        {
+          "y": [
+            1,
+            4
+          ],
+          "x": [
+            4,
+            16
+          ]
+        },
+        {
+          "y": [
+            3,
+            4
+          ],
+          "x": [
+            4,
+            16
+          ]
+        },
+        {
+          "x": [
+            12,
+            16
+          ],
+          "y": [
+            3,
+            4
+          ]
+        },
+        {
+          "x": [
+            12,
+            16
+          ],
+          "y": [
+            1,
+            4
+          ]
+        }
+      ],
+      "rotation": [
+        180,
+        0,
+        0,
+        180
+      ],
+      "size": [
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        },
+        {
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
+        }
+      ]
+    },
+    "4 'H'": {
       "position": [
         {
           "x": [
@@ -443,105 +844,229 @@
         }
       ]
     },
-    "5": {
+    "5 Left": {
       "position": [
         {
-          "x": 0,
-          "y": 0
+          "y": [
+            1,
+            4
+          ],
+          "x": [
+            26,
+            64
+          ]
         },
         {
-          "x": 0,
-          "y": 0
+          "y": [
+            3,
+            4
+          ],
+          "x": [
+            26,
+            64
+          ]
         },
         {
-          "x": 0,
-          "y": 0
+          "x": [
+            51,
+            64
+          ],
+          "y": [
+            3,
+            4
+          ]
         },
         {
-          "x": 0,
-          "y": 0
+          "x": [
+            51,
+            64
+          ],
+          "y": [
+            1,
+            4
+          ]
         },
         {
-          "x": 0,
-          "y": 0
+          "x": [
+            7,
+            64
+          ],
+          "y": [
+            1,
+            2
+          ]
         }
       ],
-      "rotation": [],
+      "rotation": [
+        180,
+        0,
+        0,
+        180,
+        90
+      ],
       "size": [
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         },
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         },
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         },
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         },
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            1,
+            5
+          ],
+          "w": [
+            5,
+            8
+          ]
         }
       ]
     },
-    "6": {
+    "5 Right": {
       "position": [
         {
-          "x": 0,
-          "y": 0
+          "y": [
+            1,
+            4
+          ],
+          "x": [
+            26,
+            64
+          ]
         },
         {
-          "x": 0,
-          "y": 0
+          "y": [
+            3,
+            4
+          ],
+          "x": [
+            26,
+            64
+          ]
         },
         {
-          "x": 0,
-          "y": 0
+          "x": [
+            51,
+            64
+          ],
+          "y": [
+            3,
+            4
+          ]
         },
         {
-          "x": 0,
-          "y": 0
+          "x": [
+            51,
+            64
+          ],
+          "y": [
+            1,
+            4
+          ]
         },
         {
-          "x": 0,
-          "y": 0
-        },
-        {
-          "x": 0,
-          "y": 0
+          "x": [
+            57,
+            64
+          ],
+          "y": [
+            1,
+            2
+          ]
         }
       ],
-      "rotation": [],
+      "rotation": [
+        180,
+        0,
+        0,
+        180,
+        270
+      ],
       "size": [
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         },
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         },
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         },
         {
-          "h": 0,
-          "w": 0
+          "h": [
+            3,
+            8
+          ],
+          "w": [
+            3,
+            8
+          ]
         },
         {
-          "h": 0,
-          "w": 0
-        },
-        {
-          "h": 0,
-          "w": 0
+          "h": [
+            1,
+            5
+          ],
+          "w": [
+            5,
+            8
+          ]
         }
       ]
     }
