client / server are talking well now

--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
   "debug": false,
   "data": {
     "player": 0,
-    "playerName": "Butthead",
-    "playerID": "",
+    "name": "Butthead",
+    "room": "",
     "health": 30,
     "eyeball": 0,
     "lightning": 0,
