--- a/public/src/client/config.json
+++ b/public/src/client/config.json
@@ -40,7 +40,7 @@
           "w": 0.8,
           "h": 0.3
         },
-        "fill": 255,
+        "fill": [120,120,120,127],
         "buffer": 2,
         "textSize": 14,
         "maxSize": 30
