--- a/public/src/client/config.json
+++ b/public/src/client/config.json
@@ -1,6 +1,7 @@
 {
   "listen": "kitten.pink:8080",
   "framerate": 10,
+  "board": "default",
   "defaultEmit": "change",
   "text": {
     "size": 36
@@ -40,7 +41,12 @@
           "w": 0.8,
           "h": 0.3
         },
-        "fill": [120,120,120,127],
+        "fill": [
+          120,
+          120,
+          120,
+          127
+        ],
         "buffer": 2,
         "textSize": 14,
         "maxSize": 30
@@ -57,6 +63,337 @@
           "y": 0.8
         }
       }
+    }
+  },
+  "player": {
+    "fill": {
+      "base": 255,
+      "enabled": [
+        251,
+        251,
+        251,
+        150
+      ],
+      "disabled": [
+        25,
+        12,
+        50,
+        127
+      ]
+    }
+  },
+  "counter": {
+    "fill": {
+      "base": 255,
+      "disabled": [
+        127,
+        127,
+        127,
+        127
+      ],
+      "enabled": [
+        0,
+        0,
+        0,
+        0
+      ]
+    },
+    "design": {
+      "health": {
+        "position": {
+          "x": 0,
+          "y": 0
+        },
+        "size": {
+          "w": [
+            1,
+            3
+          ],
+          "h": [
+            1,
+            4
+          ]
+        },
+        "textSize": "large",
+        "fill": [
+          255,
+          127,
+          255,
+          75
+        ],
+        "image": "health.png"
+      },
+      "eyeball": {
+        "position": {
+          "x": [
+            -2,
+            3
+          ],
+          "y": [
+            3,
+            4
+          ]
+        },
+        "size": {
+          "w": [
+            1,
+            4
+          ],
+          "h": [
+            1,
+            7
+          ]
+        },
+        "fill": [
+          127,
+          255,
+          255,
+          75
+        ],
+        "textSize": "medium",
+        "image": "eyeball.png"
+      },
+      "lightning": {
+        "position": {
+          "x": 0,
+          "y": [
+            3,
+            4
+          ]
+        },
+        "size": {
+          "w": [
+            1,
+            4
+          ],
+          "h": [
+            1,
+            7
+          ]
+        },
+        "fill": [
+          255,
+          255,
+          127,
+          75
+        ],
+        "textSize": "medium",
+        "image": "lightning.png"
+      },
+      "horn": {
+        "position": {
+          "x": [
+            2,
+            3
+          ],
+          "y": [
+            3,
+            4
+          ]
+        },
+        "size": {
+          "w": [
+            1,
+            4
+          ],
+          "h": [
+            1,
+            7
+          ]
+        },
+        "fill": [
+          127,
+          255,
+          127,
+          75
+        ],
+        "textColor": 0,
+        "textSize": "medium",
+        "image": "horn.png"
+      },
+      "enemy4": {
+        "position": {
+          "x": [
+            -2,
+            3
+          ],
+          "y": [
+            -9,
+            16
+          ]
+        },
+        "size": {
+          "w": [
+            1,
+            6
+          ],
+          "h": [
+            1,
+            9
+          ]
+        },
+        "fill": [
+          127,
+          127,
+          255,
+          75
+        ],
+        "textSize": "normal",
+        "disabled": true,
+        "image": "enemy.png"
+      },
+      "enemy2": {
+        "position": {
+          "x": [
+            -1,
+            3
+          ],
+          "y": [
+            -9,
+            16
+          ]
+        },
+        "size": {
+          "w": [
+            1,
+            6
+          ],
+          "h": [
+            1,
+            9
+          ]
+        },
+        "fill": [
+          127,
+          127,
+          255,
+          75
+        ],
+        "textSize": "normal",
+        "disabled": true,
+        "image": "enemy.png"
+      },
+      "enemy1": {
+        "position": {
+          "x": 0,
+          "y": [
+            -9,
+            16
+          ]
+        },
+        "size": {
+          "w": [
+            1,
+            6
+          ],
+          "h": [
+            1,
+            9
+          ]
+        },
+        "fill": [
+          127,
+          127,
+          255,
+          75
+        ],
+        "textSize": "normal",
+        "disabled": true,
+        "image": "enemy.png"
+      },
+      "enemy3": {
+        "position": {
+          "x": [
+            1,
+            3
+          ],
+          "y": [
+            -9,
+            16
+          ]
+        },
+        "size": {
+          "w": [
+            1,
+            6
+          ],
+          "h": [
+            1,
+            9
+          ]
+        },
+        "fill": [
+          127,
+          127,
+          255,
+          75
+        ],
+        "textSize": "normal",
+        "disabled": true,
+        "image": "enemy.png"
+      },
+      "enemy5": {
+        "position": {
+          "x": [
+            2,
+            3
+          ],
+          "y": [
+            -9,
+            16
+          ]
+        },
+        "size": {
+          "w": [
+            1,
+            6
+          ],
+          "h": [
+            1,
+            9
+          ]
+        },
+        "fill": [
+          127,
+          127,
+          255,
+          75
+        ],
+        "textSize": "normal",
+        "disabled": true,
+        "image": "enemy.png"
+      }
+    }
+  },
+  "layout": {
+    "default": {
+      "position": [
+        {
+          "x": [
+            1,
+            2
+          ],
+          "y": [
+            1,
+            2
+          ]
+        }
+      ],
+      "rotation": [
+        0
+      ],
+      "size": [
+        {
+          "h": [
+            7,
+            8
+          ],
+          "w": [
+            7,
+            8
+          ]
+        }
+      ]
     }
   }
 }
